oauth服务名称修改

--- a/alicloud-oauth-server/pom.xml
+++ b/alicloud-oauth-server/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/>
     </parent>
     <groupId>com.chinafocus</groupId>
-    <artifactId>alicloud-oauth-service</artifactId>
+    <artifactId>alicloud-oauth-server</artifactId>
 
 
     <dependencies>
