--- a/alicloud-api/pom.xml
+++ b/alicloud-api/pom.xml
@@ -13,6 +13,11 @@
     <version>0.0.1-SNAPSHOT</version>
     <dependencies>
         <dependency>
+            <groupId>com.chinafocus</groupId>
+            <artifactId>alicloud-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
