--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.chinafocus</groupId>
     <artifactId>alicloud</artifactId>
-    <version>${project-version}</version>
+    <version>0.0.1-SNAPSHOT</version>
     <name>alicloud</name>
 
     <modules>
