--- a/pom.xml
+++ b/pom.xml
@@ -21,16 +21,18 @@
         <module>alicloud-oauth-server</module>
         <module>alicloud-oauth-client</module>
         <module>alicloud-common</module>
+        <module>alicloud-rocket</module>
     </modules>
 
     <properties>
         <project-version>0.0.1-SNAPSHOT</project-version>
         <java.version>1.8</java.version>
-        <alibaba-version>2.2.1.RELEASE</alibaba-version>
+        <alibaba-version>2.2.2.RELEASE</alibaba-version>
         <spring-cloud-openfeign.version>2.2.2.RELEASE</spring-cloud-openfeign.version>
         <spring-cloud-netflix.version>2.2.2.RELEASE</spring-cloud-netflix.version>
         <spring-cloud-gateway.version>2.2.2.RELEASE</spring-cloud-gateway.version>
         <spring-cloud-oauth2>2.2.2.RELEASE</spring-cloud-oauth2>
+        <spring-cloud-stream.version>Horsham.SR3</spring-cloud-stream.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -66,6 +68,13 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-oauth2</artifactId>
                 <version>${spring-cloud-oauth2}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-stream-dependencies</artifactId>
+                <version>${spring-cloud-stream.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
